[package]
name = "kubecfg"
version = "0.2.0"
authors = ["Angus Lees <gus@inodes.org>"]

[profile.release]
panic = "abort"

[dependencies]
clap = "2.33"
json = "0.12"
log = "0.4"
env_logger = "0.3"
hyper = "0.10"
hyper-native-tls = "0.2.2"
yaml-rust = "0.4"
error-chain = "0.12"
url = "1.7"
jsonnet-rs = "0.17"
