[package]
name = "kubecfg"
version = "0.2.0"
authors = ["Angus Lees <gus@inodes.org>"]

[profile.release]
panic = "abort"

[dependencies]
clap = "2.34"
json = "0.12.4"
log = "0.4.21"
env_logger = "0.3"
hyper = "0.10"
hyper-native-tls = "0.3.0"
yaml-rust = "0.4.5"
error-chain = "0.12.4"
url = "1.7.2"
jsonnet-rs = "0.17"
